# skeleton

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  premake5.lua
.github/workflows/: build.yml
Sandbox/src/: SimpleMenu.cpp  SimpleMenu.h  Source.cpp
SimpleENgine/src/: Box.cpp  Box.h  Source.cpp  TestMap.cpp  TestMap.h  Textbox.cpp  Textbox.h  UIheaders.h  text.cpp  text.h
SimpleENgine/src/GUI/: Box.cpp  Box.h  Button.cpp  Button.h  ButtonController.h  Cursor.cpp  Cursor.h  GUIheaders.h  InputBox.cpp  InputBox.h  Popup.cpp  Popup.h  Prompt.cpp  Prompt.h  Text.h  Textbox.h
SimpleENgine/src/Managers/: AnimationController.cpp  AnimationController.h  AudioProviderInterface.h  ButtonController.cpp  ButtonController.h  CacheSystem.cpp  CacheSystem.h  Cacheable.h  FontManager.cpp  FontManager.h  InputController.cpp  ManagerHeaders.h  ResourceManager.cpp  ResourceManager.h  SFMLAudioProvider.cpp  SFMLAudioProvider.h  SFMLCacheSystem.h  SoundManager.cpp  SoundManager.h  StateManager.cpp  StateManager.h
SimpleENgine/src/States/: State.h  StateHeaders.h  StateManager.cpp  StateManager.h  TestState.cpp  TestState.h
SimpleENgine/src/UI/: Box.cpp  Box.h  Button.cpp  Button.h  ButtonCallback.cpp  ButtonCallback.h  ButtonController.cpp  ButtonController.h  ButtonStaticCallback.cpp  ButtonStaticCallback.h  Cursor.cpp  Cursor.h  InputBox.cpp  InputBox.h  InterfaceButton.cpp  InterfaceButton.h  Popup.cpp  Popup.h  PopupBinary.cpp  PopupBinary.h  TextButton.cpp  TextButton.h  Textbox.cpp  Textbox.h  UIheaders.h  _test_CallbackTextButton.cpp  _test_CallbackTextButton.h  jButton.cpp  jButton.h  text.cpp  text.h
SimpleENgine/src/Util/: Animation.cpp  Animation.h  FPSCounter.cpp  FPSCounter.h  InputController.cpp  InputController.h  Math.h  Random.h  UtilHeaders.h  sf_to_json.h
Skeleton/src/: Application.cpp  Application.h
Skeleton/src/GUI/: Box.cpp  Box.h  Button.cpp  Button.h  Cursor.cpp  Cursor.h  InputBox.cpp  Popup.cpp  Prompt.cpp  Prompt.h  Text.cpp  TextBox.cpp  Transformable.cpp  Transformable.h
Skeleton/src/Managers/: AnimationController.cpp  AudioProvider.cpp  AudioProvider.h  (+10 more)
include/Skeleton/: Application.h
skeleton/: skeleton.filters
skeleton/Shaders/: blur.frag
skeleton/src/: Application.cpp  Application.h  Config.h  Source.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  Source.cpp
src/GUI/: Box.cpp  Button.cpp  Button.h  Cursor.cpp  GUIheaders.h  InputBox.h  Popup.cpp  Popup.h  Prompt.cpp  Text.cpp  Text.h  Textbox.cpp  Textbox.h
src/Managers/: AnimationController.h  AudioProviderInterface.h  ButtonController.cpp  CacheSystem.h  StateManager.h
src/Sandbox/: CMakeLists.txt  SimpleMenu.cpp  SimpleMenu.h  Source.cpp
src/Skeleton/: Application.cpp  CMakeLists.txt
src/Skeleton/GUI/: Box.cpp  Button.cpp  Cursor.cpp  InputBox.cpp  Popup.cpp  Prompt.cpp  Text.cpp  TextBox.cpp  Transformable.cpp
src/Skeleton/Managers/: AnimationController.cpp  AudioProvider.cpp  ButtonController.cpp  CacheSystem.cpp  InputController.cpp  SFMLAudioProvider.cpp  StateManager.cpp
src/Skeleton/States/: FrameworkSplashScreen.cpp  State.cpp
src/Skeleton/Util/: Animation.cpp  FPSCounter.cpp  Math.cpp  Random.cpp
src/States/: State.h  TestState.cpp  TestState.h
src/Util/: Animation.cpp  Animation.h  Math.cpp  Math.h  Random.h
(+81 files in other folders)
